crates/plotnik-lib/tests/03-analyze/alternations/mixed_multiple_alternations.txt
Q = (foo
  [
    A: (a)
    (b)
  ]
  [
    C: (c)
    (d)
  ]
)
------------------ DIAGNOSTICS -------------------
error: cannot mix enum and union branches
 --> query.ptk:4:5
  |
3 |     A: (a)
  |     - enum branch here
4 |     (b)
  |     ^^^
  |
help: use all labels for an enum, or none for a merged struct

error: cannot mix enum and union branches
 --> query.ptk:8:5
  |
7 |     C: (c)
  |     - enum branch here
8 |     (d)
  |     ^^^
  |
help: use all labels for an enum, or none for a merged struct
-------------------- SYMBOLS ---------------------
